fix: :bug: Correcao de overflow da tela de login

--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,5 +1,6 @@
 body{
-    background-color:  #E5E5E5;;
+    background-color:  #E5E5E5;
+    overflow-x: hidden;
 }
 
 .login__text{
